--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 .content-container {
-  width: auto;
+  width: 73%;
   margin: 0 auto;
 }
 
@@ -34,7 +34,8 @@ a:hover,
   font-weight: 600;
 }
 
-.nav-btn {
+.nav-btn,
+.pricing-btn {
   padding: 0 18px;
   border: 2px solid;
   border-radius: 8px;
@@ -47,7 +48,8 @@ a:hover,
   margin-right: 13%;
 }
 
-.nav-btn:hover {
+.nav-btn:hover,
+.pricing-btn:hover {
   background-color: rgb(233, 233, 255);
   border: 2px solid blue;
   border-radius: 8px;
@@ -75,7 +77,8 @@ a:hover,
   max-width: 700px;
 }
 
-.supporting-text {
+.supporting-text,
+.p-supporting-text {
   font-size: 18px;
   text-align: center;
   margin-bottom: 48px;
@@ -137,15 +140,16 @@ img {
   display: inline-block;
   margin-bottom: 20px;
 }
-.sub-section {
+.sub-section,
+.faq-heading {
   font-size: 21px;
   font-weight: 700;
   margin-bottom: 20px;
 }
-.feature-p {
+.feature-p,
+.p-feature-p {
   font-size: 15px;
-  color: #161c2d;
-  opacity: 0.7;
+  color: #5b606c;
 }
 
 .features {
@@ -186,4 +190,201 @@ img {
   flex-basis: 514px;
   height: 450px;
   margin: 100px 0;
+}
+
+/* STATISTICS */
+.stat-value {
+  font-size: 48px;
+  font-weight: bolder;
+  color: #161c2d;
+}
+
+.stat-text {
+  font-size: 17px;
+  color: #5b606c;
+}
+
+.stat {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-basis: 290px;
+  gap: 26px;
+}
+
+.stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 73%;
+  margin: 96px auto;
+}
+
+/* MANAGE */
+.manage-heading,
+.pricing-heading {
+  font-size: 32px;
+  text-align: center;
+  font-weight: 700;
+  margin-bottom: 14px;
+}
+
+.manage-number {
+  font-size: 17px;
+  color: #473bf0;
+  background-color: #eaeafd;
+  border-radius: 30px;
+  padding: 12px 18px;
+  margin-top: 6px;
+}
+
+.manage-sub-section {
+  font-size: 21px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+.manage-1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 100px;
+  width: 73%;
+  margin: 0 auto;
+}
+
+.process {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 22px;
+  margin-bottom: 30px;
+}
+
+/* REVIEWS */
+.review-container {
+  background-color: #f4f7fa;
+  padding: 100px 0;
+}
+
+.reviews {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 60%;
+  margin: 0 auto;
+  gap: 60px;
+}
+
+.review-img {
+  width: 72px;
+  height: 72px;
+  margin-bottom: 24px;
+}
+
+.review-heading,
+.review-p,
+.reviewer,
+.review-occupation {
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.reviewer {
+  margin-bottom: 4px;
+}
+.review {
+  flex-basis: 300px;
+}
+
+/* PRICING */
+.pricing-container {
+  background-color: #161c2d;
+  padding: 48px 0;
+}
+
+.pricing-heading,
+.faq-heading {
+  color: white;
+}
+.p-supporting-text,
+.p-feature-p,
+.faq-5 {
+  color: #adb0b5;
+}
+
+.pricing-cards {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 32px;
+  width: 73%;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.pricing-card {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding-bottom: 14px;
+  border-radius: 10px;
+}
+
+.pricing-level {
+  font-size: 17px;
+  font-weight: bold;
+  color: #473bf0;
+  background-color: #eaeafd;
+  border-radius: 30px;
+  padding: 12px 24px;
+  margin: 24px auto;
+}
+
+.ptext-1,
+.ptext-2,
+.stat-value {
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.pricing-btn {
+  margin: 0 16px;
+}
+
+.faqs {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 73%;
+  gap: 32px;
+  margin: 64px auto;
+}
+
+.faq {
+  display: flex;
+  align-items: flex-start;
+  gap: 32px;
+}
+.que-mark {
+  background-color: #68d585;
+  font-size: 17px;
+  font-weight: bolder;
+  color: white;
+  border-radius: 30px;
+  padding: 12px 18px;
+  margin-top: 6px;
+}
+
+.support {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  margin: 48px auto 0;
+  grid-column: 1/-1;
+}
+.faq-link {
+  color: #68d585;
+}
+
+.faq-link:hover {
+  color: white;
 }
