completed the landing page-desktop view

--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@
 }
 
 .content-container {
-  width: 73%;
+  width: 100%;
   margin: 0 auto;
 }
 
 /* NAVIGATION BAR */
-.logo {
+.logo,
+.footer-logo {
   font-size: 32px;
   font-weight: 900;
   margin-left: 13%;
@@ -97,7 +98,8 @@ a:hover,
   margin: 0 auto 48px;
 }
 
-.btn-1:hover {
+.btn-1:hover,
+.cta-btn-2:hover {
   background-color: rgb(233, 233, 255);
   border: 2px solid blue;
   border-radius: 12px;
@@ -124,13 +126,20 @@ a:hover,
 
 img {
   display: block;
-  width: 70%;
-  height: auto;
+  width: 73%;
   margin: 0 auto 48px;
-  text-align: center;
 }
 
 /* UNIQUE PROPOSITIONS */
+.features {
+  display: flex;
+  width: 73%;
+  margin: 0 auto;
+  margin-bottom: 48px;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .feature {
   width: 28%;
 }
@@ -150,15 +159,6 @@ img {
 .p-feature-p {
   font-size: 15px;
   color: #5b606c;
-}
-
-.features {
-  display: flex;
-  width: 73%;
-  margin: 0 auto;
-  margin-bottom: 48px;
-  align-items: center;
-  justify-content: space-between;
 }
 
 /* GETTING STARTED */
@@ -387,4 +387,80 @@ img {
 
 .faq-link:hover {
   color: white;
+}
+
+/* CTA */
+
+.cta,
+footer {
+  width: 73%;
+  margin: 80px auto;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.cta-supporting-text {
+  font-size: 18px;
+  text-align: left;
+  max-width: 500px;
+}
+
+.cta-btn {
+  width: 340px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cta-btn-1,
+.cta-btn-2 {
+  padding: 14px 32px;
+  border: none;
+  border-radius: 12px;
+  background-color: #eeedfd;
+  color: blue;
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0;
+}
+
+.cta-btn-2 {
+  background-color: blue;
+  color: white;
+}
+
+/* FOOTER */
+footer {
+  gap: 40px;
+}
+.footer-logo {
+  margin: 0 0 32px;
+}
+
+.socials {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 24px;
+  margin-top: 32px;
+}
+
+.social-logo {
+  width: 19px;
+  height: 19px;
+  margin: 0;
+}
+
+.footer-content-1 {
+  flex-basis: 260px;
+}
+li {
+  list-style: none;
+  margin-bottom: 16px;
+}
+
+li:first-child {
+  margin-left: 16px;
+  color: #aaafbd;
 }
