--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   font-family: "poppins", sans-serif;
   color: #161c2d;
-  box-sizing: border-box;
 }
 
 .content-container {
@@ -166,10 +169,12 @@ img {
 
 /* GETTING STARTED */
 
-.gs-1 {
+.getting-started,
+.review-container {
   background-color: #f4f7fa;
+  max-width: 100%;
 }
-.gs-2 {
+.gs {
   display: flex;
   width: 80%;
   margin: 0 auto;
@@ -265,11 +270,6 @@ img {
 }
 
 /* REVIEWS */
-.review-container {
-  background-color: #f4f7fa;
-  padding: 100px 0;
-}
-
 .reviews {
   display: flex;
   align-items: flex-start;
@@ -277,6 +277,7 @@ img {
   width: 60%;
   margin: 0 auto;
   gap: 60px;
+  padding: 100px 0;
 }
 
 .review-img {
