mini tablet view revamped

--- a/css/queries.css
+++ b/css/queries.css
@@ -271,8 +271,9 @@
 
   .getting-started .container {
     display: grid;
-    grid-template-columns: 1fr;
-    gap: 2.4rem;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: space-between;
     margin-top: 6.4rem;
   }
 
@@ -287,8 +288,7 @@
 
   .section-heading,
   .gs-text {
-    text-align: center;
-    max-width: 40rem;
+    max-width: 60rem;
   }
 
   .btn-1 {
@@ -296,22 +296,30 @@
     margin: 0 auto 4.8rem;
     border-radius: 1rem;
     padding: 1rem 2rem;
-    display: block;
   }
 
   .gs-img,
   .manage-image {
-    width: 45rem;
+    width: 30rem;
     height: auto;
     margin: 0;
     align-self: center;
     justify-self: center;
   }
 
+  .gs-img {
+    justify-self: flex-end;
+  }
+
+  .manage-image {
+    width: 45rem;
+  }
+
   .stats {
     width: 100%;
     gap: 2.4rem;
   }
+
   .stat {
     flex-direction: column;
     flex-basis: auto;
@@ -322,11 +330,21 @@
     font-size: 3.2rem;
   }
 
-  .processes {
-    flex-direction: column;
+  .manage-1 {
+    width: 100%;
   }
+  .processes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+  }
+
   .reviews {
-    width: 75%;
+    width: 60%;
+  }
+
+  .review {
+    flex-basis: 25rem;
   }
 
   .review:last-child {
@@ -347,7 +365,9 @@
   .ptext-1,
   .ptext-2 {
     margin-bottom: 2rem;
+    font-size: 1.2rem;
   }
+
   .pricing-btn {
     font-size: 1.2rem;
     border-radius: 0.6rem;
@@ -372,9 +392,16 @@
   .cta-text .section-heading {
     margin-bottom: 1.2rem;
   }
+
+  .cta-text .section-heading,
+  .cta-supporting-text {
+    text-align: center;
+  }
+
   footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 6.4rem;
   }
 
   .footer-content:nth-child(5) {
