--- a/css/queries.css
+++ b/css/queries.css
@@ -28,6 +28,10 @@
     margin: 0 auto;
   }
 
+  .header {
+    height: 8rem;
+  }
+
   .logo {
     font-size: 2.4rem;
     font-weight: 900;
@@ -241,7 +245,7 @@
     font-size: 43.75%;
   }
   .content-container {
-    width: 57.6rem;
+    width: 80%;
     margin: 0 auto;
   }
 
@@ -410,5 +414,161 @@
 
   .footer-content:nth-child(4) {
     grid-column: 2;
+  }
+}
+
+@media (max-width: 36em) {
+  html {
+    font-size: 37.5%;
+  }
+  .content-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .header {
+    height: 8rem;
+  }
+
+  .display {
+    font-size: 3rem;
+    margin: 12rem auto 1.6rem;
+    max-width: 50rem;
+  }
+
+  .supporting-text,
+  .p-supporting-text {
+    font-size: 1.6rem;
+    max-width: 50rem;
+  }
+
+  .button {
+    width: 90%;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .btn-1,
+  .btn-2 {
+    font-size: 1.4rem;
+    margin: 0 auto 1.8rem;
+    font-weight: 600;
+    height: 4.8rem;
+    width: 100%;
+  }
+
+  .feature-icon {
+    width: 10%;
+    margin-bottom: 1rem;
+  }
+
+  .sub-section,
+  .faq-heading,
+  .manage-sub-section,
+  .review-heading {
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+  }
+
+  .getting-started .gs-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+  }
+  .gs-img {
+    justify-self: center;
+  }
+
+  .gs-content .section-heading,
+  .gs-text {
+    text-align: center;
+    max-width: 45rem;
+  }
+
+  .gs-content .section-heading,
+  .manage-heading,
+  .pricing-heading {
+    font-size: 2.4rem;
+  }
+
+  .gs-text {
+    font-size: 1.6rem;
+  }
+
+  .stat-value {
+    font-size: 1.8rem;
+  }
+
+  .stat-text {
+    font-size: 1.4rem;
+  }
+  .manage-image {
+    width: 30rem;
+  }
+
+  .manage-number {
+    margin-top: 0;
+  }
+
+  .content-container.reviews {
+    padding: 4.8rem 0;
+  }
+  .review-img {
+    width: 30%;
+  }
+
+  .review-p,
+  .reviewer,
+  .review-occupation {
+    font-size: 1.4rem;
+  }
+  .faqs {
+    grid-template-columns: 1fr;
+  }
+
+  .support {
+    justify-self: flex-start;
+    margin: 0;
+  }
+  .p-feature-p {
+    font-size: 1.4rem;
+  }
+
+  .cta-text .section-heading {
+    font-size: 1.8rem;
+  }
+  .cta-supporting-text {
+    font-size: 1.6rem;
+  }
+
+  .cta-btn,
+  .cta-btn-1,
+  .cta-btn-2 {
+    width: 100%;
+    gap: 1.2rem;
+  }
+
+  .cta-btn-1,
+  .cta-btn-2 {
+    height: 5rem;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 600;
+  }
+
+  .content-container footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 6.4rem;
+  }
+
+  .footer-content:nth-child(5) {
+    grid-column: auto;
+  }
+
+  .footer-content:nth-child(4) {
+    grid-column: auto;
   }
 }
