--- a/css/queries.css
+++ b/css/queries.css
@@ -476,7 +476,10 @@
     grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
+
+    width: 90%;
   }
+
   .gs-img {
     justify-self: center;
   }
@@ -484,7 +487,7 @@
   .gs-content .section-heading,
   .gs-text {
     text-align: center;
-    max-width: 45rem;
+    max-width: 50rem;
   }
 
   .gs-content .section-heading,
@@ -562,6 +565,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 6.4rem;
+    column-gap: 3.2rem;
   }
 
   .footer-content:nth-child(5) {
@@ -570,5 +574,9 @@
 
   .footer-content:nth-child(4) {
     grid-column: auto;
+  }
+
+  .footer-link:link {
+    padding: 0;
   }
 }
