--- a/css/queries.css
+++ b/css/queries.css
@@ -545,8 +545,12 @@
 
   .pricing-cards {
     flex-direction: column;
+    align-items: center;
     gap: 2.4rem;
     max-width: 80%;
+  }
+  .pricing-card {
+    width: 65%;
   }
 
   .faqs {
@@ -589,6 +593,10 @@
     grid-template-columns: 1fr 1fr;
     row-gap: 6.4rem;
     column-gap: 3.2rem;
+  }
+
+  .footer-content-1 {
+    grid-column: 1 / 3;
   }
 
   .footer-content:nth-child(5) {
