--- a/css/queries.css
+++ b/css/queries.css
@@ -432,6 +432,7 @@
   }
   .nav-btn {
     width: 90%;
+    height: 5rem;
   }
 
   .display {
@@ -457,7 +458,7 @@
     font-size: 1.4rem;
     margin: 0 auto 1.8rem;
     font-weight: 600;
-    height: 4.8rem;
+    height: 5rem;
     width: 100%;
   }
 
@@ -536,20 +537,20 @@
     margin-left: 4%;
   }
 
-  .reviews,
   .pricing-cards {
-    display: grid;
-    grid-template-columns: 25rem 25rem 25rem;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1.2rem;
-    white-space: nowrap;
-    width: 100vh;
-    overflow-x: auto;
   }
 
   .review:nth-child(3) {
-    display: inline;
+    display: none;
+  }
+
+  .review:nth-child(2) {
+    display: none;
   }
 
   .review-p,
