--- a/css/style.css
+++ b/css/style.css
@@ -396,9 +396,9 @@ img {
 }
 
 .ptext-2 {
-  margin-right: 1.2rem;
-  margin-left: 1.2rem;
+  margin: 0 1.2rem 0 1.2rem;
 }
+
 .pricing-btn {
   margin: 0 1.6rem;
 }
